# numdiff

./: CMakeLists.txt  analyze.c  cmpbuf.c  cmpbuf.h  cmpfns.c  error.c  flags.c  getopt.c  getopt1.c  ignorelist.c  main.c  ndselect.h  number.c  numdiff.h  numdiff_config.h.in  options.c  read_line.c  setmode.c  system.h  thrlist.c  xalloc-die.c  xmalloc.cxx
